run with caching for layer0,1,2

--- a/prototyping_notebooks/prototype_cached_conv1d.ipynb
+++ b/prototyping_notebooks/prototype_cached_conv1d.ipynb
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-04 11:45:18.913723: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-09-04 13:32:34.297851: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-09-04 11:45:19.372108: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-09-04 13:32:34.762410: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -108,8 +108,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-04 11:45:20.168576: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2023-09-04 11:45:20.190035: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "2023-09-04 13:32:35.554176: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2023-09-04 13:32:35.573131: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1956] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
       "Skipping registering GPU devices...\n"
      ]
     },
@@ -668,7 +668,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-04 11:45:26.711886: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
+      "2023-09-04 13:32:36.572198: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32\n",
       "\t [[{{node Placeholder/_0}}]]\n"
      ]
     },
@@ -676,7 +676,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1211/1211 [==============================] - 4s 3ms/step - loss: 0.0350\n",
+      "1211/1211 [==============================] - 4s 2ms/step - loss: 0.0350\n",
       "Epoch 2/5\n",
       "1211/1211 [==============================] - 3s 2ms/step - loss: 0.0037\n",
       "Epoch 3/5\n",
@@ -690,7 +690,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f38113a0940>"
+       "<keras.callbacks.History at 0x7f4859a99ca0>"
       ]
      },
      "execution_count": 20,
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "9ae0b49a",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1031,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd40be6",
+   "id": "f7d07714",
    "metadata": {},
    "source": [
     "### manually run second layer"
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "ae955c9c",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "6c286471",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1097,7 @@
        "        0.        , 0.        , 0.        ]], dtype=float32)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "f2256e15",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1132,7 @@
        "        0.        , 0.        , 0.        ]], dtype=float32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "0b7e1d0d",
    "metadata": {},
    "outputs": [
@@ -1154,7 +1154,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a2a28b4",
+   "id": "ca00b874",
    "metadata": {},
    "source": [
     "### manually run third layer"
@@ -1177,8 +1177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "f8ef633b",
+   "execution_count": 35,
+   "id": "f17c2608",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "8bb1f3f7",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1223,7 @@
        "((1, 16, 1), (1,))"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "4e15ff22",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "2c7ddedf",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1267,7 @@
        "array([0.33559772], dtype=float32)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "dbf1a12b",
    "metadata": {},
    "outputs": [
@@ -1289,7 +1289,7 @@
        "0.3355977"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "id": "c660e69c",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1310,7 @@
        "array([ True])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "id": "7dadc0ee",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1334,7 @@
        "27"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc7f2d44",
+   "id": "66b89883",
    "metadata": {},
    "source": [
     "run all the same stuff in a python object"
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "id": "9b301748",
    "metadata": {},
    "outputs": [],
@@ -1419,36 +1419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "81f36332",
+   "execution_count": null,
+   "id": "77c83f44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "layer_0_out (9, 4)\n",
-      "layer_1_out (3, 8)\n",
-      "layer_2_out (16,)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.33559772], dtype=float32)"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "b2d01d45",
+   "execution_count": 43,
+   "id": "84a07cd0",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1446,7 @@
        "array([ True])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "004aaceb",
+   "id": "14cd8d60",
    "metadata": {},
    "source": [
     "# caching\n",
@@ -1490,8 +1470,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "3f33e331",
+   "execution_count": 44,
+   "id": "616cf595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "id": "892f3a3e",
    "metadata": {},
    "outputs": [],
@@ -1630,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 46,
    "id": "5062d33e",
    "metadata": {},
    "outputs": [
@@ -1679,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 47,
    "id": "0671e187",
    "metadata": {},
    "outputs": [
@@ -1697,7 +1677,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1719,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 48,
    "id": "2c37f3f5",
    "metadata": {},
    "outputs": [],
@@ -1733,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 49,
    "id": "79f938e3",
    "metadata": {},
    "outputs": [],
@@ -1747,8 +1727,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "f08caf96",
+   "execution_count": 52,
+   "id": "0dc52db8",
    "metadata": {},
    "outputs": [
     {
@@ -1761,18 +1741,18 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.29461187,  0.3274455 ,  0.37451553,  0.3759022 ,  0.38534966,\n",
-       "        0.37622088,  0.3640202 ,  0.34810728,  0.28860468,  0.24934375,\n",
-       "        0.19947615,  0.12068876,  0.03427411, -0.04163421, -0.11471061,\n",
-       "       -0.19247875, -0.25439587, -0.30226848, -0.32917932, -0.3559884 ,\n",
-       "       -0.37087953, -0.3804698 , -0.39099517, -0.37602454, -0.35055625,\n",
-       "       -0.33411023, -0.30218345, -0.26526642, -0.23138636, -0.15920699,\n",
+       "array([ 0.2810807 ,  0.33174926,  0.35379964,  0.3875883 ,  0.39832938,\n",
+       "        0.39674163,  0.37473503,  0.35213518,  0.30720225,  0.25406438,\n",
+       "        0.21059942,  0.12637402,  0.03369725, -0.04693315, -0.11987064,\n",
+       "       -0.18805474, -0.24967363, -0.2958787 , -0.32999426, -0.35600394,\n",
+       "       -0.3727538 , -0.3790676 , -0.3917754 , -0.37765178, -0.34995723,\n",
+       "       -0.33222196, -0.30218345, -0.26526642, -0.23138636, -0.15920699,\n",
        "       -0.06759215,  0.010593  ,  0.09197972,  0.1653738 ,  0.21602073,\n",
        "        0.27216068,  0.33559772,  0.3647034 ,  0.3738055 ,  0.37879044],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,23 +1765,87 @@
     "    next_step_y_pred = model.apply(longer_test_seq[0, i])\n",
     "    y_preds.append(next_step_y_pred)\n",
     "\n",
-    "np.stack(y_preds).flatten()"
+    "y_preds = np.stack(y_preds).flatten()\n",
+    "y_preds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b978d50",
+   "execution_count": 53,
+   "id": "ea57babb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.29461184,  0.3274455 ,  0.37451556,  0.37590218,  0.3853497 ,\n",
+       "        0.37622088,  0.36402023,  0.34810725,  0.28860468,  0.24934366,\n",
+       "        0.19947602,  0.1206888 ,  0.03427413, -0.04163425, -0.11471059,\n",
+       "       -0.19247872, -0.25439584, -0.30226862, -0.32917932, -0.35598844,\n",
+       "       -0.37087944, -0.38046977, -0.39099526, -0.3760245 , -0.3505563 ,\n",
+       "       -0.3341102 , -0.30218342, -0.26526642, -0.23138633, -0.15920699,\n",
+       "       -0.06759232,  0.01059318,  0.09197989,  0.1653739 ,  0.21602067,\n",
+       "        0.2721607 ,  0.33559766,  0.36470342,  0.3738055 ,  0.37879047],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred_keras.flatten()"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "id": "12a5b56e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(np.isclose(y_preds[27:], y_pred_keras.flatten()[27:], atol=1e-5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfed16c5",
+   "metadata": {},
+   "source": [
+    "### a more general model\n",
+    "\n",
+    "the final generalisation is..\n",
+    "\n",
+    "1) a rolling window for the raw input\n",
+    "2) block with layer cache for first N-1 \"layers\"\n",
+    "3) no need for cache for final layer\n",
+    "4) single dot product at end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "87c68c72",
+   "id": "2b8a9373",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e21088ee",
    "metadata": {},
    "outputs": [],
    "source": []
