- general cleanup - switch to SAI_32KHZ - move parser for serial.WAVE.txt to WAVE.ssv into python script - switch to a depth4 model - move c definition stuff onto cached_block_model.py and have it write to a model_defn.h that patch_cdcc.cpp can import

--- a/prototyping_notebooks/prototype_cached_conv1d.ipynb
+++ b/prototyping_notebooks/prototype_cached_conv1d.ipynb
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "e18dc328",
    "metadata": {},
    "outputs": [],
@@ -966,21 +966,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "da058261",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# float b0_c1_kernel[] =  {-0.3499537706375122, 0.4767807722091675, -0.276955783367157, ...};\n",
-    "# float b0_c1_bias[] =  {-0.09601898491382599, 0.07755038887262344, 0.08477196097373962, ...};\n",
-    "# float b0_c2_kernel[] =  {-0.2658056914806366, 0.7682933211326599, -0.11211162805557251, ...};\n",
-    "# float b0_c2_bias[] =  {-0.01840214617550373, -0.12641476094722748, 0.0, 0.03806652873754501};\n",
-    "# Block block0(4, // kernel_size\n",
-    "#              2, 4, // in_d, out_d\n",
-    "#              b0_c1_kernel, b0_c1_bias, b0_c2_kernel, b0_c2_bias);\n",
-    "\n",
-    "def print_input_buffer_dec(block):\n",
-    "    pass\n",
+    "def print_input_buffer_dec():\n",
+    "    print(\"LeftShiftBuffer left_shift_input_buffer(\")\n",
+    "    print(f\"    {K},   // kernel size\")\n",
+    "    print(f\"    {IN_D});  // feature depth\")\n",
     "\n",
     "def print_block_declarations(n, block):\n",
     "    print(f\"float b{n}_c1_kernel{ca(block.c1_kernel)}\")\n",
@@ -992,14 +986,6 @@
     "    print(f\"             b{n}_c1_kernel, b{n}_c1_bias, b{n}_c2_kernel, b{n}_c2_bias);\")\n",
     "    print()\n",
     "\n",
-    "    # float layer_1_cache_buffer[8*16*4];\n",
-    "# RollingCache layer_1_cache(\n",
-    "#   8,   // depth\n",
-    "#   16,  // dilation\n",
-    "#   4,   // kernel size\n",
-    "#   layer_1_cache_buffer\n",
-    "#   );\n",
-    "\n",
     "def print_layer_cache_declarations(n, lc):\n",
     "    print(f\"float layer{n}_cache_buffer[{lc.depth}*{lc.dilation}*{lc.kernel_size}];\")\n",
     "    print(f\"RollingCache layer_{n}_cache(\")\n",
@@ -1010,15 +996,6 @@
     "    print(f\");\")\n",
     "    print()\n",
     "    \n",
-    "# float* classifier_weights = [];\n",
-    "# float* classifier_biases = [];\n",
-    "# Classifier classifier(\n",
-    "#   8, // feature_depth\n",
-    "#   2, // num_outputs\n",
-    "#   classifier_weights, \n",
-    "#   classifier_biases\n",
-    "# );\n",
-    "\n",
     "def print_classifier_declarations():\n",
     "    print(f\"float classifier_weights{ca(classifier.weights)}\")\n",
     "    print(f\"float classifier_biases{ca(classifier.biases)}\")    \n",
@@ -1096,13 +1073,13 @@
     }
    ],
    "source": [
-    "print_input_buffer_dec(blocks[0])\n",
-    "print_block_declarations(0, blocks[0])\n",
-    "print_block_declarations(1, blocks[1])\n",
-    "print_block_declarations(2, blocks[2])\n",
-    "print_layer_cache_declarations(0, cached_block_model.layer_caches[0])\n",
-    "print_layer_cache_declarations(1, cached_block_model.layer_caches[1])\n",
-    "print_classifier_declarations()  # includes output buffer dec\n"
+    "print_input_buffer_dec()\n",
+    "# print_block_declarations(0, blocks[0])\n",
+    "# print_block_declarations(1, blocks[1])\n",
+    "# print_block_declarations(2, blocks[2])\n",
+    "# print_layer_cache_declarations(0, cached_block_model.layer_caches[0])\n",
+    "# print_layer_cache_declarations(1, cached_block_model.layer_caches[1])\n",
+    "# print_classifier_declarations()  # includes output buffer dec\n"
    ]
   },
   {
