move training directly out of train_model.2d_embed notebook, still need to port the tied weights version

--- a/prototyping_notebooks/train_model.2d_embed.ipynb
+++ b/prototyping_notebooks/train_model.2d_embed.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "459f896d-d7b0-4bb6-ae4f-90d14bfab2ce",
+   "metadata": {},
+   "source": [
+    "# see keras_model.train instead\n",
+    "\n",
+    "note: still to port is the single block average gradient code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f3605364",
@@ -10,7 +20,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-12 20:39:56.708728: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "2023-09-16 15:03:31.306613: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -249,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc10a41b0a0>]"
+       "[<matplotlib.lines.Line2D at 0x7f8540ad9a60>]"
       ]
      },
      "execution_count": 7,
@@ -280,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc10a407e80>]"
+       "[<matplotlib.lines.Line2D at 0x7f8540a53c40>]"
       ]
      },
      "execution_count": 8,
@@ -311,7 +321,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc10a380ca0>]"
+       "[<matplotlib.lines.Line2D at 0x7f8540a4ddf0>]"
       ]
      },
      "execution_count": 9,
@@ -342,7 +352,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc10a2fec10>]"
+       "[<matplotlib.lines.Line2D at 0x7f85409c9cd0>]"
       ]
      },
      "execution_count": 10,
@@ -373,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc10a2735e0>]"
+       "[<matplotlib.lines.Line2D at 0x7f85409520a0>]"
       ]
      },
      "execution_count": 11,
@@ -404,7 +414,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc10a1ff250>]"
+       "[<matplotlib.lines.Line2D at 0x7f85408c4880>]"
       ]
      },
      "execution_count": 12,
@@ -428,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "id": "f2d9b48f",
    "metadata": {},
    "outputs": [
@@ -472,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "id": "39ea3b71",
    "metadata": {},
    "outputs": [],
@@ -486,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "id": "5b5a3fce",
    "metadata": {},
    "outputs": [
@@ -494,11 +504,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_6\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_7 (InputLayer)        [(None, 1280, 3)]         0         \n",
+      " input_1 (InputLayer)        [(None, 1280, 3)]         0         \n",
       "                                                                 \n",
       " c0a (Conv1D)                (None, 1280, 4)           52        \n",
       "                                                                 \n",
@@ -554,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "742a8fa1-a9fb-47a7-a742-f77be556b963",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "36952205-cba1-4474-ba77-8f8d0500a887",
    "metadata": {},
    "outputs": [
@@ -1180,9 +1190,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RollingCache depth=4 & kernel_size=4 => num_entries=16\n",
-      "RollingCache depth=8 & kernel_size=4 => num_entries=64\n",
-      "RollingCache depth=8 & kernel_size=4 => num_entries=256\n",
+      ">RollingCache depth=4 dilation=4 kernel_size=4 => num_entries=16\n",
+      ">RollingCache depth=4 dilation=16 kernel_size=4 => num_entries=64\n",
+      ">RollingCache depth=4 dilation=64 kernel_size=4 => num_entries=256\n",
       "LGTM\n"
      ]
     }
