first WIP version of network

--- a/sverilog_version/tests/fixed point test data.ipynb
+++ b/sverilog_version/tests/fixed point test data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "id": "00a3bdb0-9081-4b4c-a04d-ed26e189785b",
    "metadata": {},
    "outputs": [],
@@ -44,6 +44,10 @@
     "#    if q_val != v:\n",
     "#        raise Exception(f\"couldn't convert [{v}] exactly, best was [{swfp}]\")\n",
     "    print(f\"{swfp.hex()},   # {bits(swfp)} {q_val}\")\n",
+    "\n",
+    "def dump_l(l):\n",
+    "    for v in l:\n",
+    "        dump(v)\n",
     "\n",
     "DFT_NUM_BITS = 16\n",
     "\n",
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "8375b33f-5d26-4eda-8a97-0e3deca8d94b",
    "metadata": {},
    "outputs": [
@@ -117,12 +121,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x0999,   # 0000.100110011001 0.599853515625\n"
+      "0x0934,   # 0000.100100110100 0.5751953125\n",
+      "0xFBBE,   # 1111.101110111110 -0.26611328125\n",
+      "0xF580,   # 1111.010110000000 -0.65625\n",
+      "0xFB0D,   # 1111.101100001101 -0.309326171875\n"
      ]
     }
    ],
    "source": [
-    "dump( 0.599853515625 )"
+    "dump_l([0.57543945, -0.26635742, -0.65649414, -0.30957031])"
    ]
   },
   {
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "169ff7b0-ab03-42a9-94b6-f8fed2feaf17",
    "metadata": {},
    "outputs": [
@@ -153,17 +160,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0xF706,   # 1111.011100000110 -0.56103515625\n"
+      "0x0325,   # 0000.001100100101 0.196533203125\n",
+      "0x0E60,   # 0000.111001100000 0.8984375\n"
      ]
     }
    ],
    "source": [
-    "dump( 0.599853515625  -0.1259765625 +0.31396484375-0.158935546875-1-0.18994140625)"
+    "dump_l([0.19677734,  0.89868164])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "0b0e26db-5b48-4384-9fc8-7e805710d6ad",
    "metadata": {},
    "outputs": [
@@ -176,7 +184,12 @@
     }
    ],
    "source": [
-    "dump(-1)"
+    "0000.001100100101\n",
+    "0000.001100100110\n",
+    "\n",
+    "0000.111001100000\n",
+    "0000.111001100001\n",
+    "\n"
    ]
   },
   {
@@ -294,7 +307,7 @@
     }
    ],
    "source": [
-    "dump(-0.5)"
+    "dumpl([])"
    ]
   },
   {
@@ -498,213 +511,6 @@
    "source": [
     "# a2b2 \n",
     "dump(0.31396484375 * -0.158935546875)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "3df5705c-8d1b-4ee4-97ed-1cc6e6e95f03",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0xF000,   # 1111.000000000000 -1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# a3b3 \n",
-    "dump(-1 * 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "8dfbf081-de2e-4239-a8a6-f4c2913fdecf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0x0028,   # 0000.000000101000 0.009765625\n"
-     ]
-    }
-   ],
-   "source": [
-    "# a6b6\n",
-    "dump(0.009765625*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "id": "a643068c-1f3e-4d73-833e-dbf452453ee5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0xFFAF,   # 1111.111110101111 -0.019775390625\n"
-     ]
-    }
-   ],
-   "source": [
-    "# a7b7\n",
-    "dump(-0.019775390625*1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "id": "acb9bc24-ac0f-438d-9253-22aae405bc35",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0x0052,   # 0000.000001010010 0.02001953125\n"
-     ]
-    }
-   ],
-   "source": [
-    "dump(-0.18994140625 + -0.0498046875 + 0.25 + 0.009765625)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "6231429f-1cb3-492d-94ac-7d1d5afafff6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0xF67A,   # 1111.011001111010 -0.59521484375\n"
-     ]
-    }
-   ],
-   "source": [
-    "dump(-0.075439453125-1+0.5-0.019775390625)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "478e0b27-19fe-4333-8a8c-50fe5fd7a6ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0xF6CC,   # 1111.011011001100 -0.5751953125\n"
-     ]
-    }
-   ],
-   "source": [
-    "dump(0.02001953125-0.59521484375)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "26a4f25e-95bd-4cc0-aa90-38e4cedc14a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.5754188299179077"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum([0.25*-0.759765625, \n",
-    " -0.1259765625*0.599853515625, \n",
-    " 0.31396484375*-0.158935546875,\n",
-    " -1*1,\n",
-    " 0.25*1,\n",
-    " -1*-0.5,\n",
-    " 0.009765625*1,\n",
-    " -0.019775390625*1])\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "id": "9644f7bd-1509-492a-b557-70a4a31d3698",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0xF6CC,   # 1111.011011001100 -0.5751953125\n"
-     ]
-    }
-   ],
-   "source": [
-    "dump(-0.5754188299179077)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1846b346-5f7c-4498-93c1-d36b1ea3df1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1111_1111.0110_1100_1011_000101011010"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "id": "9a05f8d1-c115-4da7-a150-3b750cb8ce5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0xF6CB,   # 1111.011011001011 -0.575439453125\n"
-     ]
-    }
-   ],
-   "source": [
-    "dump(-0.5751953125-(2**-10)+(2**-11)+(2**-12))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "id": "f10b3421-1cce-4591-b1ee-c7c945a75370",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2**-1"
    ]
   },
   {
