--- a/compare qkeras to fxpmath model.ipynb
+++ b/compare qkeras to fxpmath model.ipynb
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "42fdca1d-bb7e-4081-b202-b8de1a8bd810",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
        "<Axes: xlabel='n', ylabel='y_pred'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -587,6 +587,10 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "y_pred_sverilog = open('y_pred.sverilog.txt').readlines()\n",
     "y_pred_sverilog = list(map(float, y_pred_sverilog))\n",
     "\n",
